// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistogramFilter component should render when binSize prop is provided and with the correct number of bins 1`] = `
<DocumentFragment>
  <div
    class="histogram"
    data-testid="histogram"
  >
    <div
      class="histogram__bar-container"
      style="height: 300px;"
    >
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 0ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 100ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 200ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 300ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(0.4); transition-delay: 400ms;"
      />
    </div>
    <svg
      height="80"
      style="top: 300px;"
      width="0"
    />
    <svg
      class="y-axis"
      height="300"
      width="80"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(50, 0)"
      >
        <path
          class="domain"
          d="M0.5,300.5V0.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,300.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,270.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,240.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,210.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,180.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,150.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,90.50000000000001)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,60.499999999999986)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,30.499999999999993)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            5.0
          </text>
        </g>
      </g>
    </svg>
    <div
      class="erd_scroll_detection_container erd_scroll_detection_container_animation_active"
      style="visibility: hidden; display: inline; width: 0px; height: 0px; z-index: -1; overflow: hidden; margin: 0px; padding: 0px;"
    >
      <div
        class="erd_scroll_detection_container"
        dir="ltr"
        style="position: absolute; flex: 0 0 auto; overflow: hidden; z-index: -1; visibility: hidden; width: 100%; height: 100%; left: 0px; top: 0px;"
      >
        <div
          class="erd_scroll_detection_container"
          style="position: absolute; flex: 0 0 auto; overflow: hidden; z-index: -1; visibility: hidden; left: -501px; top: -501px; right: -500px; bottom: -500px;"
        >
          <div
            style="position: absolute; flex: 0 0 auto; overflow: scroll; z-index: -1; visibility: hidden; width: 100%; height: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; width: 1011px; height: 1011px;"
            />
          </div>
          <div
            style="position: absolute; flex: 0 0 auto; overflow: scroll; z-index: -1; visibility: hidden; width: 100%; height: 100%;"
          >
            <div
              style="position: absolute; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HistogramFilter component should render when nBins prop is provided and with the correct number of bins 1`] = `
<DocumentFragment>
  <div
    class="histogram"
    data-testid="histogram"
  >
    <div
      class="histogram__bar-container"
      style="height: 300px;"
    >
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(1); transition-delay: 0ms;"
      />
      <div
        class="histogram histogram__bar histogram__bar--within-range"
        data-testid="histogram-bar"
        style="transform: scaleY(1); transition-delay: 250ms;"
      />
    </div>
    <svg
      height="80"
      style="top: 300px;"
      width="0"
    />
    <svg
      class="y-axis"
      height="300"
      width="80"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(50, 0)"
      >
        <path
          class="domain"
          d="M0.5,300.5V0.5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,300.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,270.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            0.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,240.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,210.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            1.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,180.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,150.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            2.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,90.50000000000001)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            3.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,60.499999999999986)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,30.499999999999993)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            4.5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="0"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-6"
          >
            5.0
          </text>
        </g>
      </g>
    </svg>
    <div
      class="erd_scroll_detection_container erd_scroll_detection_container_animation_active"
      style="visibility: hidden; display: inline; width: 0px; height: 0px; z-index: -1; overflow: hidden; margin: 0px; padding: 0px;"
    >
      <div
        class="erd_scroll_detection_container"
        dir="ltr"
        style="position: absolute; flex: 0 0 auto; overflow: hidden; z-index: -1; visibility: hidden; width: 100%; height: 100%; left: 0px; top: 0px;"
      >
        <div
          class="erd_scroll_detection_container"
          style="position: absolute; flex: 0 0 auto; overflow: hidden; z-index: -1; visibility: hidden; left: -501px; top: -501px; right: -500px; bottom: -500px;"
        >
          <div
            style="position: absolute; flex: 0 0 auto; overflow: scroll; z-index: -1; visibility: hidden; width: 100%; height: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; width: 1011px; height: 1011px;"
            />
          </div>
          <div
            style="position: absolute; flex: 0 0 auto; overflow: scroll; z-index: -1; visibility: hidden; width: 100%; height: 100%;"
          >
            <div
              style="position: absolute; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
